# steveswift.com.au

./: 404.md  CNAME  Gemfile  README.md  _config.yml  about.md  index.md  news.md  papers.md  people.md  publications.md  services.md
_data/: gumroad.json  theme.yml
_includes/: contact-list.html  footer.html
_includes/cv/: papers.html
_includes/gumroad/: embed-card.html
_layouts/: cv.html
_people/: 01-steve-swift.md  02-kathy-swift.md  03-ben-swift.md
_posts/: 2017-04-04-aviation-law-conference-2017.md  2017-08-22-icaf-2017.md  2017-11-03-nandtb-seminar-on-aircraft-inspection-and-maintenance.md  2017-11-22-ifa-conference-on-training-and-safety-management-systems.md  2018-02-20-holsip-2018.md  2018-10-12-ifa-conference-and-workshop-dubai.md  2019-03-08-holism-next-step-in-the-evolution-of-structural-airworthiness?.md  2019-07-16-icaf-2019-plantema-lecture-and-medal.md  2020-02-03-ifa-reminds-operators-of-firefighting-aircraft-to-check-their-maintenance.md  2020-03-06-ndt-seminar-sydney-18-19-march-2020-(cancelled).md  2022-01-23-welcome-to-jekyll.markdown  2022-03-24-vale-david-hoeppner.md
_posts/2022-03-24/: vale-david-hoeppner
_sass/basically-basic/: _global.scss
assets/images/papers/: downloader.exs
assets/stylesheets/: main.scss
migration/: README.md  migrate_posts.py  pyproject.toml
